--- a/index.html
+++ b/index.html
@@ -5,27 +5,22 @@
     <link rel="stylesheet" href="resources/master.css">
     <script type="text/javascript" src="resources/master.js"></script>
     <script type="text/javascript" src="SimpleDisplay.js"></script>
-    <title>SD | Home</title>
+    <title>SD | <span id="subtitle" ></span></title>
   </head>
   <body onload="loaded();">
     <header>
       <nav id="nav_menu">
-        <span id="nav_botao">≡</span> Menu
-        <ul id="nav_options">
-          <li>Display</li>
-          <li>Rect</li>
-          <li>Cyrcle</li>
-        </ul>
-        <div class="fundo">
-
-        </div>
+	  empty!
       </nav>
-      <h1>SampleDisplay|{subTitle}</h1>
+      <h1 id="title">empty!</h1>
     </header>
-    <section id="displayS" onload="SimpleDisplay.addDisplay(this,'exemplo');" >
-      <svg id="display" height="300" width="500" xmlns="http://www.w3.org/2000/svg">
+    <section id="display">
+	<!--
+	   <svg id="display" height="300" width="500" xmlns="http://www.w3.org/2000/svg">
 
       </svg>
+	-->
+
     </section>
     <section id="content" >
 		empty!
