--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>SD | <span id="subtitle" ></span></title>
   </head>
   <body onload="loaded();">
-    <header>
+    <header id="page">
       <nav id="nav_menu">
 	  empty!
       </nav>
