Pequenas fun;'oes do terminal v2

--- a/index0.html
+++ b/index0.html
@@ -12,6 +12,7 @@
 			<li> <a href="v00.02"> Verção .1</a></li>
 			<li> <a href="v001.0"> Verção 1</a></li>
 			<li> <a href="v001.1"> Verção 1.1</a></li>
+			<li> <a href="v002.0"> Verção 2.0</a></li>
 			
 	</body>
 
