--- a/v002.0/index0.html
+++ b/v002.0/index0.html
@@ -33,22 +33,24 @@
 		<a href="#">
 			<img src="proximo.svg">
 		</a>
-		
-
-
 	   </p>
 		
     </section>
 	<nav class = "bloco">
 		<ul>
 			<li>
-				<a href="#" onclick="page.openServer('http://github/KnightSlayer/server/server-terminal.php')">knigthSlayer</a>
+				<a href="#" onclick="page.openServer('https://localhost/KnightSlayer/server/server-terminal.php')">knigthSlayer</a>
 			</li>
 			<li>
-				<a href="#" onclick="page.openServer('http://github/Cloto/server/server-terminal.php')">Cloto</a>
+				<a href="#" onclick="page.openServer('https://localhost/Cloto/server/server-terminal.php')">Cloto</a>
 			</li>
 			<li>
-				<a href="#" onclick="page.openServer('http://github/EW/server/eddysworld_server.term.php')">EddysWorld</a>
+				Eddy's World
+				<ul>
+					<li><a href="#" onclick="page.openServer('https://localhost/EddysWorld/server/eddysworld_server.term.php')">Server</a></li>
+					<li><a href="#" onclick="page.openGrimorio()">Grimorio</a></li>
+				</ul>
+				
 			</li>
 			<li>
 				<a href="#" onclick="page.clear()">Clear</a>
