--- a/svg.html
+++ b/svg.html
@@ -1,24 +1,9 @@
 <html>
 	<head>
 		<title>SimpleDisplay | text of SVG</title>
+		<script type="text/javascript" src="https://localhost/SimpleDisplay/simpledisplay_v1.0.js"></script>
 	</head>
 	<body>
-		<svg style="background-color:blue;height:100%;width:100%">
-			<rect 
-				id="10" 
-				x="10" 
-				y="100"
-				width="100"
-				height="100" 
-				style="
-					fill:purple;
-					stroke:red;
-				" 
-			/>
-			<text x="0" y="35" font-family="Verdana" font-size="35">
-				Hellou, out there
-			</text>
-		</svg>
 		
 	</body>
 </html>
