Praticamente fechado a vercao 2

--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
 	<head>
 	<meta charset="utf-8">
-<!--
-	<META http-equiv="REFRESH" content="3; url=v001.1/"> 
--->	
+	<META http-equiv="REFRESH" content="3; url=v002.0/"> 
 	</head>
 	<body>
+		<h1>VocE sera redirecionado para a vrecao atual e 3 segundos</h1>
 		<ul>
 			<li> <a href="v00.01"> Verção .1</a></li>
 			<li> <a href="v00.02"> Verção .1</a></li>
