--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	<meta charset="utf-8">
-	<META http-equiv="REFRESH" content="3; url=v002.0/"> 
+	<!-- META http-equiv="REFRESH" content="3; url=v002.0/" --> 
 	</head>
 	<body>
 		<h1>VocE sera redirecionado para a vrecao atual e 3 segundos</h1>
@@ -12,6 +12,7 @@
 			<li> <a href="v001.0"> Verção 1</a></li>
 			<li> <a href="v001.1"> Verção 1.1</a></li>
 			<li> <a href="v002.0"> Verção 2.0</a></li>
+			<li> <a href="v002.1"> Verção 2.1</a></li>
 			
 	</body>
 
