Primeiros detalhes das configuracaoes do terminal

--- a/v002.0/index.html
+++ b/v002.0/index.html
@@ -36,7 +36,7 @@
 	   </p>
     </section>
 	<div id="menu" class="bloco">
-		<img href="configbotton.svg">
+		<img src="btnConfig.svg">
 	</div>
   </body>
 </html>
