Tentando corrigir erro de envio de dados

--- a/v002.1/index.html
+++ b/v002.1/index.html
@@ -40,9 +40,8 @@
 			<h3>Config</h3>
 			<a href="#">Documentacao</a>
 			<ul>
-				<li>Cloto</li>
-				<li>KnightSlayer</li>
-				<li>EddysWord</li>
+				<li><a onclick="page.config();page.openServer('http://localhost/moiras-cloto-server/server-terminal.php')">Cloto Local Server</a>
+				<li><a onclick="page.config();page.openServer('http://limapage.esy.es/servers/cloto/server-terminal.php')">Cloto Cload Server</a>
 			</ul>
 			<form>
 				<input placeholder="URL do servidor">
