--- a/v002.1/index.html
+++ b/v002.1/index.html
@@ -42,6 +42,8 @@
 			<ul>
 				<li><a onclick="page.config();page.openServer('http://localhost/moiras-cloto-server/server-terminal.php')">Cloto Local Server</a>
 				<li><a onclick="page.config();page.openServer('http://limapage.esy.es/servers/cloto/server-terminal.php')">Cloto Cload Server</a>
+				<li><a onclick="page.config();page.openServer('http://localhost/EddysWorld/server/eddysworld_server.term.php')">EddysWorld</a>
+				<li> <a onclick="page.config(); page.openServer('http://localhost/EddysWorld/server/eddysworld_server.term.php'); term.setBase('grimorio.ouvir(',')'); ">EddysWorld Grimorio</a>
 			</ul>
 			<form>
 				<input placeholder="URL do servidor">
