Apenas alterações nos links

--- a/v002.1/index.html
+++ b/v002.1/index.html
@@ -38,11 +38,16 @@
 		</div>
 		<div id="menu-content">
 			<h3>Config</h3>
-			<a href="#">Documentacao</a>
+			
+			Nuvem
+			<ul>
+				<li><a onclick="page.config();page.openServer('http://limapage.esy.es/servers/cloto/server-terminal.php')">Cloto</a>
+				<li><a onclick="page.config();page.openServer('http://limapage.esy.es/servers/eddysworld-server/eddysworld_server.term.php')">Eddys World</a>
+			</ul>
+			Local
 			<ul>
 				<li><a onclick="page.config();page.openServer('http://localhost/moiras-cloto-server/server-terminal.php')">Cloto Local Server</a>
-				<li><a onclick="page.config();page.openServer('http://limapage.esy.es/servers/cloto/server-terminal.php')">Cloto Cload Server</a>
-				<li><a onclick="page.config();page.openServer('https://localhost/EddysWorld/server/eddysworld_server.term.php')">EddysWorld</a>
+				<li><a onclick="page.config();page.openServer('https://localhost/eddysworld-server/eddysworld_server.term.php')">EddysWorld</a>
 				<li> <a onclick="page.config(); page.openServer('https://localhost/EddysWorld/server/eddysworld_server.term.php'); term.setBase('grimorio.ouvir(',')'); ">EddysWorld Grimorio</a>
 				<li> <a onclick="page.config(); page.openServer('https://localhost/KnightSlayer/server/server-terminal.php'); ">K-Slayer Local</a>
 			</ul>
@@ -51,6 +56,7 @@
 				<button>SetServer</button>
 			</form>
 			<button onclick="page.config()" >Cancelar</button>
+			<p><a href="#">Documentacao</a><p>
 		</div>
 	</menu-base>
   </body>
